log/build_2020-08-08_10-59-07/main/stderr.log
/Users/mukuyo/Desktop/RI-AI/src/main/src/goalie.cpp:6:15: error: use of undeclared identifier 'Calc'
        float degree=Calc::degree_atan2(ball.pose,robot.pose)-robot.pose.theta;
                     ^
/Users/mukuyo/Desktop/RI-AI/src/main/src/goalie.cpp:7:23: error: use of undeclared identifier 'Calc'
        float TH_goal_degree=Calc::degree_atan2(goal.their,robot.pose);
                             ^
2 errors generated.
make[2]: *** [CMakeFiles/main.dir/src/goalie.cpp.o] Error 1
make[1]: *** [CMakeFiles/main.dir/all] Error 2
make: *** [all] Error 2
make: INTERNAL: Exiting with 9 jobserver tokens available; should be 8!
